Test/errors/err_unique_memberwise_copy.cb
// Stage 2 of `unique`: a struct that owns a raw pointer has no memberwise copy. The
// synthesized `.copy()` shallow-copies pointer fields (there is no generic deep-clone for a
// raw pointer), which would hand one pointee to two synthesized destructors. Refused at the
// synthesis site instead. `Holder b = a;` still works - that MOVES, leaving one owner.
struct Node { int v = 0; };

struct Holder { unique Node* slot = nullptr; };

// `.copy()` on a Holder VALUE dispatches its memberwise copy, which is refused at the synthesis
// site. (A `.copy()` on a `Holder*` is a pointer-identity borrow copy, so it must be a value here.)
expect_error("cannot copy 'Holder': its field 'Holder.slot' is 'unique'") {
    Holder duplicate(Holder h) { Holder c = h.copy(); return move c; }
}

extern int main()
{
    return 0;
}
